Carga unos ajustes menores

--- a/httpdocs/app.css
+++ b/httpdocs/app.css
@@ -21,7 +21,7 @@
 }
 
 :root {
-  --color-accent: #c71585;
+  --color-accent: #004a80;
   --color-background: #fbf8e1;
   --color-heading: #0d1a26;
   --color-highlight: #222222;
