--- a/httpdocs/app.css
+++ b/httpdocs/app.css
@@ -3,13 +3,14 @@
 
 @keyframes highlight {
   from {
-    color: var(--color-accent);
+    color: var(--color-warning);
   }
 
   to {
     color: inherit;
   }
 }
+
 :root {
   font-size: 16px;
   font-variant-numeric: oldstyle-nums;
@@ -18,9 +19,7 @@
   cursor: default;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-:root {
   --color-accent: #004a80;
   --color-background: #fbf8e1;
   --color-heading: #0d1a26;
@@ -29,7 +28,12 @@
   --color-text: #274059;
   --color-text-pale: #707f8d;
   --color-line: #e3dedc;
-  --color-warning: #fdba74;
+  --color-warning: #c71585;
+}
+
+::selection {
+  color: var(--color-highlight-inverted);
+  background-color: var(--color-accent);
 }
 
 body {
@@ -95,55 +99,79 @@ x-search {
   background: var(--color-accent);
   width: 100%;
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0px;
   margin-top: var(--space-xx-large);
   padding: var(--space-medium) 0;
 }
 
-main > div {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+main:not(:empty) {
+  padding: var(--space-large) 0;
+}
+
+main > img {
+  display: block;
   text-align: center;
-  font-size: var(--type-xx-large);
   padding: var(--space-xxx-large) 0;
+  margin: auto;
+  mix-blend-mode: multiply;
+  width: 26em;
 }
 
 main > h1 {
   font-family: var(--font-display);
   font-weight: 500;
-  margin: 0;
-  padding: var(--space-medium) 0;
+  margin: 0 var(--space-small) var(--space-medium) var(--space-small);
+  padding: 0;
   text-align: center;
+  line-height: var(--line-height-condensed);
+}
+
+main > h1:not(:first-of-type) {
+  margin-top: var(--space-large);
+  margin-bottom: var(--space-large);
+}
+
+@media (min-width: 960px) {
+  main > h1:not(:first-of-type) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: var(--space-large) var(--space-xx-large) var(--space-large)
+      var(--space-xx-large);
+  }
+
+  main > h1:not(:first-of-type):after,
+  main > h1:not(:first-of-type):before {
+    content: '';
+    flex-grow: 1;
+    border-top: 2px dotted;
+  }
+
+  main > h1:not(:first-of-type):after {
+    margin-left: var(--space-medium);
+  }
+
+  main > h1:not(:first-of-type):before {
+    margin-right: var(--space-medium);
+  }
+}
+
+section {
+  max-width: 1440px;
+  width: calc(100% - 2 * var(--space-medium));
+  margin: auto;
 }
 
 section:first-of-type {
-  margin: var(--space-medium) 0;
+  margin: var(--space-medium) auto;
 }
 
 section#summary {
   display: flex;
-  margin: 0 var(--space-medium);
+  gap: var(--space-large);
+  margin: 0 auto var(--space-large) auto;
   align-items: flex-start;
-  justify-content: space-between;
-}
-
-section#summary :is(ol, figure) {
-  width: 50%;
-  flex-shrink: 0;
-  flex-grow: 0;
-  box-sizing: border-box;
-}
-
-section#summary ol {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-section#summary ol label {
-  cursor: pointer;
 }
 
 section#summary figure {
@@ -152,6 +180,7 @@ section#summary figure {
   margin: 0;
   padding: var(--space-medium) var(--space-large);
   background: var(--color-highlight-inverted);
+  min-width: 28em;
 }
 
 section#summary table {
@@ -178,7 +207,9 @@ section#summary table :is(td, th) {
   padding: var(--space-small);
 }
 
-section#summary table td {
+section#summary table td,
+section#summary table tfoot th:not(:first-of-type) {
+  font-weight: 900;
   animation: highlight var(--delay-xxx-large);
 }
 
@@ -202,15 +233,63 @@ section#summary table :is(td, th):not(:nth-child(1)) {
   text-align: right;
 }
 
+section#summary ol {
+  margin: 0;
+  padding: 0;
+  flex-grow: 1;
+  list-style-type: none;
+  padding: var(--space-large);
+  background: var(--color-highlight-inverted);
+}
+
+section#summary ol li:nth-child(odd) {
+  background: var(--color-background);
+}
+
+section#summary ol label {
+  display: block;
+  padding: var(--space-x-small) var(--space-small);
+  cursor: pointer;
+}
+
+section#summary ol label:hover span {
+  text-decoration: underline 1px;
+  text-underline-offset: 3px;
+}
+
+section#summary ol label input:checked + span {
+  font-weight: 700;
+  color: var(--color-accent);
+}
+
+section#results {
+  column-count: 3;
+}
+
+@media (max-width: 1280px) {
+  section#results {
+    column-count: 2;
+  }
+}
+
+@media (max-width: 640px) {
+  section#results {
+    column-count: 1;
+  }
+}
+section#results x-campaign {
+  margin-bottom: var(--space-medium);
+}
+
 x-details {
-  padding: var(--space-small);
+  padding: var(--space-medium);
   margin: 0 auto;
 }
 
 x-details div[slot='summary'] {
   font-style: italic;
   font-weight: 700;
-  color: var(--color-accent);
+  color: var(--color-highlight-inverted);
   margin-left: var(--space-large);
 }
 
@@ -229,9 +308,23 @@ x-details div[slot='contents'] {
   hyphens: auto;
 }
 
+x-details div[slot='contents'] video {
+  width: 100%;
+}
+
 footer {
-  padding: var(--space-xx-large) 0;
-  background: white;
+  padding: var(--space-xx-large) var(--space-medium);
+  background: var(--color-accent);
+  color: var(--color-background);
+}
+
+footer ::selection {
+  color: var(--color-accent);
+  background-color: var(--color-highlight-inverted);
+}
+
+footer :is(a, strong) {
+  color: var(--color-highlight-inverted);
 }
 
 footer h1 {
@@ -244,6 +337,7 @@ footer h1 {
   letter-spacing: var(--space-x-small);
   font-variant: small-caps;
   padding: var(--space-large) 0;
+  color: var(--color-highlight-inverted);
 }
 
 footer :is(h1, x-details) {
@@ -254,7 +348,7 @@ footer h1:after,
 footer h1:before {
   content: '';
   flex-grow: 1;
-  border-top: 2px dotted var(--color-heading);
+  border-top: 2px dotted var(--color-line);
 }
 
 footer h1:after {
