--- a/httpdocs/app.css
+++ b/httpdocs/app.css
@@ -301,15 +301,16 @@ section#summary ol label input:checked + span {
 }
 
 section#summary ol label input[type='checkbox'] {
+  --height: 1.5em;
   font-size: var(--type-xx-small);
   position: relative;
-  width: 3em;
-  height: 1.5em;
+  width: var(--space-x-large);
+  height: var(--height);
   background: var(--color-line);
   outline: none;
   border-radius: 99em;
   box-shadow: inset 0 0 0.375em rgba(0, 0, 0, 0.2);
-  transition: var(--delay-medium);
+  transition: background-color var(--delay-medium);
   cursor: pointer;
   -webkit-appearance: none;
 }
@@ -321,19 +322,17 @@ section#summary ol label input:checked[type='checkbox'] {
 section#summary ol label input[type='checkbox']:before {
   content: '';
   position: absolute;
-  width: 1.5em;
-  height: 1.5em;
+  height: 100%;
+  aspect-ratio: 1;
   border-radius: 99em;
-  top: 0;
   left: 0;
   background: var(--color-highlight-inverted);
-  transform: scale(1.1);
   box-shadow: 0 0.15em 0.375em rgba(0, 0, 0, 0.5);
-  transition: var(--delay-medium);
+  transition: left var(--delay-medium);
 }
 
 section#summary ol label input:checked[type='checkbox']:before {
-  left: 1.5em;
+  left: calc(100% - var(--height));
 }
 
 section#results {
